2009-07-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Disconnect seeder if client is also in seed state.
	* src/BtBitfieldMessage.cc
	* src/BtHaveAllMessage.cc
	* src/BtHaveMessage.cc
	* src/message.h
	* test/BtBitfieldMessageTest.cc
	* test/BtHaveAllMessageTest.cc
	* test/BtHaveMessageTest.cc
	* test/MockPieceStorage.h

2009-07-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Keep CreateRequestCommand in queue when no segment is available so
	that they can pick up pieces which slow BitTorrent peers are
	downloading.
	* src/AbstractCommand.cc
	* src/CreateRequestCommand.cc
	* src/CreateRequestCommand.h

2009-07-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	--bt-stop-timeout now only checks download speed.
	* src/BtStopDownloadCommand.cc
	* src/BtStopDownloadCommand.h
	* src/BtSetup.cc
	* src/usage_text.h
	* doc/aria2c.1.txt

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error regarding BUFSIZE.
	* src/DownloadCommand.cc
	* src/DownloadCommand.h

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented tellWaiting xml-rpc method in man page.
	* doc/aria2c.1.txt

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.5.0
	* configure.ac

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed resolved TODO1.5
	* src/AbstractCommand.cc
	* src/DownloadCommand.cc
	* src/RequestGroup.cc

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Release pooled and in-flight Request objectsand URIResult objects
	in FileEntry after download completed.
	* src/DownloadContext.cc
	* src/DownloadContext.h
	* src/FileEntry.cc
	* src/FileEntry.h
	* src/RequestGroup.cc

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Set manual and source attribute in aria2c.1.txt
	* doc/aria2c.1.txt

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
